--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Fredoka One', Arial, Helvetica, sans-serif;
 }
   
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: #d4c59b;
 }
 
 header {
@@ -28,5 +32,5 @@ header {
 
 .sketch-box {
     text-align: center;
-    border: 1px solid black;    
+    border: 1px solid black;
 }
